# SherLock_Autonomous-AI-SRE-Agent

./: .env.example  .gitignore  Makefile  Part1_Data_Intelligence_Backend_Report.docx  Part2_API_Dashboard_Deployment_Report.docx  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements-backend.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
agent/: __init__.py  config.py  main.py
agent/confidence/: __init__.py  scorer.py
agent/graph/: __init__.py  investigation_graph.py  state.py
agent/llm/: __init__.py  client.py
agent/models/: __init__.py  alert.py  hypothesis.py  investigation.py
agent/prompts/: cypher_synthesis.py  hypothesis_generation.py
agent/tools/: __init__.py  neo4j_tool.py  tavily_tool.py
api/: pyproject.toml  start_server.bat
api/src/app/: __init__.py  config.py  main.py
api/src/app/models/: __init__.py  alert.py  investigation.py
api/src/app/routers/: __init__.py  evals.py  feedback.py  health.py  investigations.py  metrics.py  remediation.py  services.py  webhooks.py
api/src/app/services/: __init__.py  auth.py  mock_data.py  pagerduty.py  queue.py  slack.py  storage.py
api/src/app/ws/: events.py
api/tests/: test_api.py
dashboard/: next.config.js  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
dashboard/lib/: api.ts  demo-data.ts  types.ts
deploy/docker/: api.Dockerfile  dashboard.Dockerfile
docs/: PART1_PART2_INTEGRATION.md
graph/: __init__.py
ingestion/: __init__.py
tasks/: lessons.md  todo.md
tests/: __init__.py
(+74 files in other folders)
