[project]
name = "sre-platform"
version = "0.1.0"
description = "Autonomous SRE Platform — Part 1: Data & Intelligence Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "neo4j>=5.0",
    "aiokafka>=0.10",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "tavily-python>=0.5",
    "tenacity>=8.0",
    "boto3>=1.35",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "graph", "agent", "evals"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
